--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 description = ""
 readme = "README.md"
 requires-python = ">=3.11,<3.12"
-dependencies = ["spconv-cu118>=2.3.6,<3"]
-
 
 [tool.pixi.dependencies]
 dask = "*"
@@ -15,7 +13,6 @@ jupyterlab = "*"
 kiwisolver = "*"
 lmdb = "*"
 matplotlib = "*"
-mkl = "*"
 networkx = "*"
 numpy = "*"
 pandas = "*"
@@ -35,9 +32,6 @@ lxml = "*"
 imageio = "*"
 numba = "*"
 tensorboard = ">=2.17.0,<3"
-blosc = ">=1.21.6,<2"
-python-blosc = ">=1.11.2,<2"
-python-blosc2 = ">=2.6.1,<3"
 pynvml = ">=11.5.3,<12"
 rich = ">=13.7.1,<14"
 typer = ">=0.12.3,<0.13"
@@ -48,11 +42,31 @@ fastapi = ">=0.112.0,<0.113"
 
 
 [tool.pixi.project]
-channels = ["rapidsai", "conda-forge"]  
-platforms = ["linux-64"]
+channels = ["rapidsai", "conda-forge"]
+platforms = ["linux-64", "osx-arm64"]
 
-[tool.pixi.system-requirements]
-cuda = "11.0"
+[tool.pixi.target.linux-64.dependencies]
+mkl = "*"
+python-blosc2 = ">=2.6.1,<3"
+
+[tool.pixi.feature.dev]
+target.osx-arm64 = { pypi-dependencies = { blosc2 = ">=2.6.1,<3" } }
+
+[tool.pixi.feature.cuda]
+system-requirements = { cuda = "11.0" }
+platforms = ["linux-64"]
+# pypi-dependencies = { "onnxscript" = "*" }
+
+[tool.pixi.feature.dev.dependencies]
+ipykernel = "*"
+hvplot = ">=0.10.0,<0.11"
+jupyter_bokeh = ">=4.0.5,<4.1"
+# dependencies = ["spconv-cu118>=2.3.6,<3"]
+
+
+[tool.pixi.environments]
+default = ["dev"]
+cuda = { features = ["cuda", "dev"] }
 
 [build-system]
 requires = ["setuptools"]
